--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -1,3 +1,7 @@
+.a{
+text-align: center;
+}
+
 .foto{
     margin-top: auto;
     border-radius: 10%;
@@ -10,20 +14,6 @@ body{
     color: black;
 }
 .menu > p{ /*Meu nome*/
-    text-align: center;
-    padding: 6px;
-    font-family: 'Montserat';
-    background-color:deeppink;  
-    color: black;
-    font-size: x-large;
-    text-transform: uppercase ;
-    font-weight: bold;
-    border-radius: 18px;
-    transition: 2s;
-    margin: 18px 25px;
-    box-shadow:10px 10px 30px 8px  #000000 
-}
-.h1{
     text-align: center;
     padding: 6px;
     font-family: 'Montserat';
@@ -52,4 +42,21 @@ body{
        line-height: 1.2;
    }
        
-      
+#geral{
+    text-align: center;
+}  
+#hobbies{
+    text-align: center;
+}
+#experiencia{
+    text-align: center;
+}
+#capacidades{
+    text-align: center;
+}
+#expectativas{
+    text-align: center;
+}
+#contato{
+    text-align: center;
+}
