--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -1,10 +1,84 @@
+* {
+    margin: 0px 0px 0px 0px;
+    padding: 0px 0px 0px 0px;
+  }
+  
+  body, html {
+    padding: 3px 3px 3px 3px;
+  
+    background-color: hotpink;
+  
+    font-family: Verdana, sans-serif;
+    font-size: 15pt;
+    text-align: center;
+  }
+  
+  div.main_page {
+    position: relative;
+    display: table;
+  
+    width: 800px;
+  
+    margin-bottom: 3px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 0px 0px 0px 0px;
+  
+    border-width: 2px;
+    border-color: #212738;
+    border-style: solid;
+    background-color: #FFFFFF;
+    text-align: center;
+  }
+  
+  div.redes-sociais{
+    display: inline;
+  }
+  
+  a:link, a:visited {
+    background-color:hotpink;
+    color: white;
+    padding: 14px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+  }
+  
+  a:hover, a:active {
+    background-color:hotpink;
+  }
+  
+  ul {
+      padding: 4px 8px 4px 16px;
+      text-align: left;
+  }
+  li{
+    margin-left: 50px;
+  }
+  
+  h1{
+    text-align:hotpink;
+  }
+  
+  h2{
+    text-align: left;
+  }
+  
+  h3{
+    color:hotpink;
+    padding-top: 15px;
+    Padding-bottom: 15px;
+  }
+  
+  p{
+    text-align: justify;
+    padding-left: 50px;
+    padding-right: 50px;
+  }
+  
+
 .a{
 text-align: center;
-}
-
-.foto{
-    margin-top: auto;
-    border-radius: 10%;
 }
 body{
     margin: 0;
@@ -18,14 +92,13 @@ body{
     padding: 6px;
     font-family: 'Montserat';
     background-color:deeppink;  
-    color: black;
     font-size: x-large;
     text-transform: uppercase ;
     font-weight: bold;
     border-radius: 18px;
     transition: 2s;
     margin: 18px 25px;
-    box-shadow:10px 10px 30px 8px  #000000 
+
 }
 .navegacao-menu{
     margin-left: 14px;
