--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -2,12 +2,10 @@
     margin: 0px 0px 0px 0px;
     padding: 0px 0px 0px 0px;
   }
-  
+
   body, html {
     padding: 3px 3px 3px 3px;
-  
-    background-color: hotpink;
-  
+    background-image: linear-gradient(to bottom right, blue, hotpink);
     font-family: Verdana, sans-serif;
     font-size: 15pt;
     text-align: center;
@@ -85,7 +83,7 @@ body{
     font-family: sans-serif;
     font-size: x-large;
     background:-moz-element();
-    color: black;
+    color:aliceblue;
 }
 .menu > p{ /*Meu nome*/
     text-align: center;
