--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -5,7 +5,7 @@
 
   body, html {
     padding: 3px 3px 3px 3px;
-    background-image: linear-gradient(to bottom right, blue, hotpink);
+    background-image: linear-gradient(to right, hotpink, deeppink,violet);
     font-family: Verdana, sans-serif;
     font-size: 15pt;
     text-align: center;
@@ -74,6 +74,11 @@
     padding-right: 50px;
   }
   
+.title {
+  text-align: center;
+  color: azure;
+
+}  
 
 .a{
 text-align: center;
@@ -89,7 +94,7 @@ body{
     text-align: center;
     padding: 6px;
     font-family: 'Montserat';
-    background-color:deeppink;  
+    background-color:deeppink;
     font-size: x-large;
     text-transform: uppercase ;
     font-weight: bold;
