--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -5,32 +5,25 @@
 
   body, html {
     padding: 3px 3px 3px 3px;
-    background-image: linear-gradient(to right, hotpink, deeppink,violet);
+    background-image: linear-gradient(to right, hotpink,violet);
     font-family: Verdana, sans-serif;
     font-size: 15pt;
     text-align: center;
   }
   
-  div.main_page {
+  div{
     position: relative;
     display: table;
-  
     width: 800px;
-  
     margin-bottom: 3px;
     margin-left: auto;
     margin-right: auto;
     padding: 0px 0px 0px 0px;
-  
     border-width: 2px;
     border-color: #212738;
     border-style: solid;
     background-color: #FFFFFF;
     text-align: center;
-  }
-  
-  div.redes-sociais{
-    display: inline;
   }
   
   a:link, a:visited {
@@ -120,19 +113,24 @@ body{
        
 #geral{
     text-align: center;
+    
 }  
 #hobbies{
     text-align: center;
+    
 }
 #experiencia{
     text-align: center;
+    
 }
 #capacidades{
     text-align: center;
 }
 #expectativas{
     text-align: center;
+    
 }
 #contato{
     text-align: center;
+    
 }
