--- a/docs/css/estilo.css
+++ b/docs/css/estilo.css
@@ -22,6 +22,11 @@ div {
   text-align: center;
 }
 
+img{
+  width: 200px;
+  border-radius: 50%;
+}
+
 a:link,
 a:visited {
   background-color: hotpink;
